<resources>
    <string name="app_name">StoryApp</string>
    <string name="welcomeText1">Welcome to Dicoding Story App</string>
    <string name="loginName">Login</string>
    <string name="registerName">Register</string>
    <string name="welcomeText2">make your own code story</string>
    <string name="notRegisterYet">don\'t have an account yet?</string>
    <string name="registered">Already have an account?</string>
    <string name="default_person">Alpa</string>
    <string name="image_story">Image Story</string>
    <string name="upload_default_time">Upload a second ago</string>
    <string name="fab_desc">FAB_STORY</string>
    <string name="loading_data">Loading…</string>
    <string name="tulis_deskripsi">Write Description.....</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">UPLOAD</string>
    <string name="pick_picture">Pick the Image</string>
    <string name="warningAddImage">Pick Image First</string>
    <string name="warningAddDescription">Description Empty</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="uid">User ID</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="copyright">\@2024 Alfa Rizqi</string>
    <string name="image_preview">Image Preview</string>
    <string name="password_minchar">Password must be at least 8 characters</string>
    <string name="password_invalid">Invalid Email Format</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="content_description_avatar">Content_Avatar</string>
    <string name="content_description_image_story">Content_Image</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit.</string>
    <string name="retry">Retry</string>
    <string name="add_your_location">Add Your Location</string>
</resources>